# aiFudi

./: .gitignore  AWE_2026_收集汇总.md  AWE_2026_第一次收集报告.md  Agent_Learning_8Week_Course_Syllabus.md  Agent_Learning_Complete_Email.txt  Agent_Learning_Course_Materials.md  Agent_Learning_Email_Content.txt  Agent_Learning_Exercises_Tests.md  Agent_Learning_Study_Plan.md  DeepAgents-完整深度研究报告.md  FINAL_SUMMARY.md  GITHUB_GUIDE.md  HMI设计方案v1.0_解析.md  Horizon-OS-Unified-Design.md  ITERATION_COMPLETE.md  ITERATION_LOG.md  ITERATION_PLAN.md  LangChain-完整深度研究报告.md  LangGraph-完整深度研究报告.md  LangGraph-源码深度研究报告.md  MEMORY.md  NORTH-AMERICA-AGENT-PROJECT.md  OPENCLAW-SKILLS-FINAL.md  OPENCLAW-SKILLS-FINAL.xlsx  OPENCLAW-SKILLS-ITERATION2.md  README.md  SCAFFOLD_v0.8.md  SKILLS-INSTALL-PLAN.md  ULTIMATE_SUMMARY.md  harness-engineering-is-cybernetics.md  learning-progress-tracker.md  open-source-tts-analysis-report.md  openWakeWord_分析报告.md  openai-harness-engineering.md  pyproject.toml  requirements.txt  tuya-cloud-api-documentation.md  计算机视觉八层演进课程大纲.md
architecture/: API_DESIGN_v0.5.md  ARCHITECTURE_v3.0.1.md  ARCHITECTURE_v3.0.10.md  ARCHITECTURE_v3.0.11.md  ARCHITECTURE_v3.0.13.md  ARCHITECTURE_v3.0.14.md  ARCHITECTURE_v3.0.2.md  ARCHITECTURE_v3.0.5.md  ARCHITECTURE_v3.0.6.md  ARCHITECTURE_v3.0.9.md  DATABASE_DESIGN_v0.5.md  DEPLOYMENT_v0.6.md  DEVELOPMENT_GUIDE_v0.3.md  SECURITY_v0.7.md  SYSTEM_ARCHITECTURE_v0.2.md
books/AI-Agents-LangChain-LangGraph-MCP/: README.md  full.md
docs/: ARCHITECTURE_v1.0.md  FILE_STRUCTURE.md  OPENCLAW_BOX_v1.0.md  PRD_v1.0.md  openclaw-feishu-extension-code-study.md
eFuse-UI-Design/: README.md
examples/: demo.py  demo_agent.py
fudi/: north-america-agent-setup.md
hkex_documents/: README.md  飞书云盘文件汇总.md  飞书云盘文件组织方案.md
keboda-huazhu-ppt/: README.md
keboda-huazhu-ppt/v1/: ppt-full-presentation.md  ppt-outline.md
keboda-huazhu-ppt/v2/: ppt-full-presentation.md  (+1 more)
lifelong-learning-demo/: README.md  docker-compose.yml  start.sh  stop.sh
lifelong-learning-python/: LICENSE  README.md  demo.py  run.py  test_api.py
memory/: 2026-03-27.md
openclaw-research-reports/: OpenClaw_Complete_Research_Report.md  README.md  chapter1-overview.md
prd/: CODE_v0.9.md  CODE_v1.0.md  MVP_v1.0.md  MVP_v1.1.md  MVP_v1.2.md  MVP_v1.3.md  MVP_v1.4.md  MVP_v1.5.md  MVP_v1.6.md  MVP_v1.7.md  MVP_v1.8.md  MVP_v1.9.md  MVP_v2.1.md  MVP_v2.2.md  MVP_v2.3.md  MVP_v2.4.md  MVP_v2.5.md  MVP_v3.0.1.md  MVP_v3.0.10.md  MVP_v3.0.11.md  MVP_v3.0.13.md  MVP_v3.0.2.md  MVP_v3.0.3.md  MVP_v3.0.5.md  MVP_v3.0.6.md  MVP_v3.0.9.md  MVP_v3.0.md  MVP_v3.1.md  MVP_v3.2.md  MVP_v3.3.md  MVP_v3.4.md  MVP_v3.5.md  MVP_v4.0.md  MVP_v5.0.md  MVP_v5.1.md  MVP_v5.2.md  MVP_v5.3.md  MVP_v5.4.md  MVP_v5.5.md  PRODUCT_SPECIFICATION_v0.1.md  (+4 more)
resume/: du-qun-resume-cn.md  du-qun-resume-en.md
scripts/: create_github_repo.py  daily_iteration.py  send_code_email.py  send_mail.py  test_imports.py
src/: .env.example  .gitignore  README.md  pyproject.toml
src/aifudi/: __init__.py  config.py  logger.py
src/aifudi/agents/: __init__.py  openclaw.py
src/aifudi/core/: __init__.py  config.py  pipeline.py
src/aifudi/core/asr/: engine.py
src/aifudi/core/audio/: io.py  kws_pipeline.py  kws_trainer.py  preprocessor.py
src/aifudi/core/llm/: engine.py  router.py
src/aifudi/core/tts/: engine.py
src/aifudi/gateway/: super_gateway.py
src/frontend/: index.html  package.json
src/frontend/src/: App.tsx  index.css  main.tsx  routes.tsx
src/frontend/src/api/: index.ts
src/frontend/src/components/: Layout.css  Layout.tsx
src/frontend/src/pages/: CategoryPage.tsx  DocumentPage.tsx  HomePage.tsx  SearchPage.tsx  SettingPage.tsx  pages.css
src/frontend/src/stores/: documentStore.ts
src/scripts/: init_db.py
src/skyone_shuge/: __init__.py
src/skyone_shuge/agents/: __init__.py  document_processor.py
src/skyone_shuge/api/: __init__.py  main.py  schemas.py
src/skyone_shuge/api/routers/: __init__.py  advanced_search.py  analytics.py  auth.py  batch.py  categories.py  documents.py  health.py  models.py  rag.py  search.py  tasks.py
src/skyone_shuge/cli/: main.py
src/skyone_shuge/core/: __init__.py  auth.py  config.py  database.py
src/skyone_shuge/ml/: __init__.py  embedding.py  llm.py  rag.py  vector_db.py
src/skyone_shuge/models/: __init__.py  category.py  document.py  document_tag.py  tag.py  user.py
src/skyone_shuge/schemas/: __init__.py  analytics.py  ml.py  rag.py  search.py  tasks.py
src/skyone_shuge/services/: __init__.py  classifier.py  indexer.py  scanner.py  search_service.py
src/skyone_shuge/utils/: __init__.py  file.py
tests/: README.md  test_agents.py
终身学习系统/: README.md  推理模型生成总结.md  飞书文档摘要.md
(+68 files in other folders)
